01-baseline/sample-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-nginx
  namespace: sample-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /sample-app(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sample-app
                port:
                  number: 80
